--- a/templates/home.html
+++ b/templates/home.html
@@ -28,21 +28,21 @@
 
             <div class="mb-3">
                 <label class="form-lebel">Race or Ethnicity</label>
-                <select name="ethnicity" class="form-control" placeholder="Enter your ethnicity" required>
+                <select name="race_ethnicity" class="form-control" placeholder="Enter your ethnicity" required>
                     <option class="placeholder" selected disable value="">Select your Ethnicity</option>
-                    <option value="Group A">
+                    <option value="group A">
                         Group A
                     </option>
-                    <option value="Group B">
+                    <option value="group B">
                         Group B
                     </option>
-                    <option value="Group C">
+                    <option value="group C">
                         Group C
                     </option>
-                    <option value="Group D">
+                    <option value="group D">
                         Group D
                     </option>
-                    <option value="Group E">
+                    <option value="group E">
                         Group E
                     </option>
                 </select>
