--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Home Page</title>
 </head>
 <body>
     <div class="login">
@@ -109,7 +110,7 @@
                     placeholder="Enter your Reading Score" min="0" max="100" />
             </div>
             <div class="mb-3">
-                <input class="btn btn-primary" type="submit" value="Predict your Maths Score" required />
+                <input class="btn-primary" type="submit" value="Predict your Maths Score" required />
             </div>
         </form>
         <h2>
